new text appear

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"
       rel="stylesheet"
@@ -12,7 +15,7 @@
     <title>GOALKEEPER</title>
   </head>
   <body>
-    <h1>Help argentina don t loose the Footbal Cup</h1>
+        <h1>Help Argentina dont loose the Footbal Cup</h1>
     <script src="./src/background-and-player.js"></script>
     <script src="./src/game.js"></script>
     <script src="./src/main.js"></script>
