--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"  rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <title>GOALKEEPER</title>
+    <title>The Goalkeeper</title>
   </head>
   <body>
-        <h1>Help Argentina dont loose the Footbal Cup</h1>
-    <script src="./src/background-and-player.js"></script>
-    <script src="./src/game.js"></script>
-    <script src="./src/main.js"></script>
+      <h1 class="tittle">The Goalkeeper Game</h1>
+      <br>
+        <p class="text">In this game you have to try to save Argentina from losing the 2014 World Cup.</p>
+      </br>
+    
+      <img src="png/mouse.gif" alt="mouse-movement" width="" height="70">
+      <p> <-- Use your mouse to move --></p>
+      <br>
+    <p><a href="index1.html" type="button" class="btn btn-primary btn-lg btn-block">Start Game!</a></p>
+    </br>
+    <div class="boxes">
+        <div>
+            <img class="fotos" src="png/sergio-romero.jpg" alt="sergio-romero" height="220">
+        </div>
+        <div>
+            <img class="fotos" src="png/mario-gotze.jpg" alt="mario-gotze" height="220">
+        </div>
+    </div>
   </body>
 </html>
  
