--- a/index1.html
+++ b/index1.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"  rel="stylesheet"/>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <title>GOALKEEPER</title>
+    <title>Goalkeeper Game</title>
   </head>
   <body>
         <h1>Help Argentina dont loose the Footbal Cup</h1>
     <script src="./src/background-and-player.js"></script>
     <script src="./src/game.js"></script>
     <script src="./src/main.js"></script>
-    <!-- <p> Score:</span class="score">0</span></p> -->
+     <p> Score:<span class="score" >0</span></p>
   </body>
 </html>
  
