--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
       <h1 class="tittle">The Goalkeeper Game</h1>
       <br>
-        <p class="text">You have to try to save Argentina from losing the 2014 World Cup.</p>
+        <p class="text">You have to save Argentina from losing the 2014 World Cup.</p>
       </br>
     
       <img src="png/mouse.gif" alt="mouse-movement" width="" height="70">
